--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.15.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "2.21.2",
@@ -21,6 +22,7 @@
     "uuidv4": "^6.2.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.7",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.11.0",
