--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,9 +23,13 @@
         "prettier"
     ],
     "rules": {
-      "camelcase": "off",
+      "no-underscore-dangle": "off",
       "prettier/prettier": "error",
       "class-methods-use-this": "off",
+      "camelcase": "off",
+      "@typescript-eslint/no-unused-vars": ["error", {
+        "argsIgnorePattern": "_"
+      }],
       "import/extensions": [
         "error",
         "ignorePackages",
