--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,12 +6,12 @@
   "password": "docker",
   "database": "essentials",
   "entities": [
-    "./src/modules/*/infra/typeorm/entities/*.ts"
+    "./src/modules/**/infra/typeorm/entities/*.ts"
   ],
   "migrations": [
-    "./src/database/migrations/*.ts"
+    "./src/shared/infra/typeorm/migrations/*.ts"
   ],
   "cli": {
-    "migrationsDir": "./src/database/migrations"
+    "migrationsDir": "./src/shared/infra/typeorm/migrations"
   }
 }
